--- a/style.css
+++ b/style.css
@@ -402,6 +402,13 @@ button {
   color: #041434;
 }
 
+.heading-4 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: -0.03em;
+  color: #041434;
+}
 .background-color{
   background-color: lightgrey;
 }
@@ -507,6 +514,10 @@ button {
   margin-right: 80px;
 }
 
+.services-block {
+  margin-bottom: 120px;
+}
+
 .services-list {
   display: flex;
   justify-content: space-between;
@@ -524,4 +535,93 @@ button {
 
 .services-item-heading {
   margin-bottom: 16px;
+}
+
+.feedbacks-block {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.feedbacks-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.feedbacks-item {
+  background-color: white;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: -0.03em;
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
+  padding: 48px;
+  max-width: 400px;
+  max-height: 391px;
+  
+}
+
+.feedbacks-heading {
+  display: inline-block;
+  max-width: 530px;
+  margin-bottom: 38px;
+}
+
+.simple-rating {
+  align-self: flex-start;
+  position: relative;
+  font-size: 20px;
+  display: inline-block;
+}
+
+.simple-rating::before {
+  content: "★★★★★" ;
+  display: block;
+
+}
+
+.simple-rating__items {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: row-reverse;
+  overflow: hidden;
+}
+
+.simple-rating__item {
+  position: absolute;
+  width: 0%;
+  height: 0%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden ;
+}
+
+.simple-rating__item:checked,
+.simple-rating__item:checked ~ .simple-rating__label {
+  color: #FEC84B;
+}
+
+.simple-rating__label {
+  flex: 0 0 20%;
+  height: 100%;
+  cursor: pointer;
+  color: lightgrey;
+}
+
+.simple-rating__label::before {
+  content: "★";
+  display: block;
+  transition: color 0.3s ease 0s;
+
+}
+
+.simple-rating__label:hover,
+.simple-rating__label:hover ~ .simple-rating__label, 
+.simple-rating__label:checked ~ .simple-rating__label:hover {
+  color: yellow;
 }
